Config/yaml/deployment-elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elastic
  name: elastic
  namespace: otobo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elastic
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f otobo-base.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: elastic
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - env:
            - name: ES_JAVA_OPTS
              valueFrom:
                configMapKeyRef:
                  key: OTOBO_ELASTICSEARCH_ES_JAVA_OPTS
                  name: env
            - name: discovery.type
              value: single-node
          image: rotheross/otobo-elasticsearch:latest
          name: elastic
          ports:
          - containerPort: 9200
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elasticsearch-data
              subPath: data
      restartPolicy: Always
      restartPolicy: Always
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-data
status: {}
