Config/yaml/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f otobo-base.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: otobo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f otobo-base.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: web
        application: otobo
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - command: ["/opt/otobo_install/entrypoint.sh"]
          args: ["web"]
          image: rotheross/otobo:rel-10_0_18
          name: web
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /opt/otobo
              name: opt-otobo
              subPath: otobo
            - mountPath: /opt/otobo-backup
              name: backups
      restartPolicy: Always
      volumes:
        - name: opt-otobo
          persistentVolumeClaim:
            claimName: opt-otobo
        - name: backups
          persistentVolumeClaim:
            claimName: otobo-backup
status: {}
